added support for sequence

--- a/src/config.json
+++ b/src/config.json
@@ -25,6 +25,10 @@
                     "audio": "1"
                 },
                 {
+                    "name": "Ruku",
+                    "audio": "4"
+                },
+                {
                     "name": "Qaumah",
                     "audio": "5"
                 },
