--- a/src/config.json
+++ b/src/config.json
@@ -73,6 +73,10 @@
                     "audio": "1"
                 },
                 {
+                    "name": "Ruku",
+                    "audio": "4"
+                },
+                {
                     "name": "Qaumah",
                     "audio": "5"
                 },
@@ -136,11 +140,15 @@
                 },
                 {
                     "name": "Surah",
-                    "audio": "S1"
+                    "audio": "S3"
                 },
                 {
                     "name": "Takbir",
                     "audio": "1"
+                },
+                {
+                    "name": "Ruku",
+                    "audio": "4"
                 },
                 {
                     "name": "Qaumah",
@@ -180,11 +188,111 @@
                 },
                 {
                     "name": "Surah",
-                    "audio": "S2"
+                    "audio": "S4"
                 },
                 {
                     "name": "Takbir",
                     "audio": "1"
+                },
+                {
+                    "name": "Ruku",
+                    "audio": "4"
+                },
+                {
+                    "name": "Qaumah",
+                    "audio": "5"
+                },
+                {
+                    "name": "Takbir",
+                    "audio": "1"
+                },
+                {
+                    "name": "Sujud",
+                    "audio": "6"
+                },
+                {
+                    "name": "Takbir",
+                    "audio": "1"
+                },
+                {
+                    "name": "Jalsa",
+                    "audio": "7"
+                },
+                {
+                    "name": "Takbir",
+                    "audio": "1"
+                },
+                {
+                    "name": "Sujud",
+                    "audio": "6"
+                },
+                {
+                    "name": "Takbir",
+                    "audio": "1"
+                },
+                {
+                    "name": "Tashahhud",
+                    "audio": "8"
+                },
+                {
+                    "name": "Takbir",
+                    "audio": "1"
+                },
+                {
+                    "name": "Fatiha",
+                    "audio": "3"
+                },
+                {
+                    "name": "Takbir",
+                    "audio": "1"
+                },
+                {
+                    "name": "Ruku",
+                    "audio": "4"
+                },
+                {
+                    "name": "Qaumah",
+                    "audio": "5"
+                },
+                {
+                    "name": "Takbir",
+                    "audio": "1"
+                },
+                {
+                    "name": "Sujud",
+                    "audio": "6"
+                },
+                {
+                    "name": "Takbir",
+                    "audio": "1"
+                },
+                {
+                    "name": "Jalsa",
+                    "audio": "7"
+                },
+                {
+                    "name": "Takbir",
+                    "audio": "1"
+                },
+                {
+                    "name": "Sujud",
+                    "audio": "6"
+                },
+                {
+                    "name": "Takbir",
+                    "audio": "1"
+                },
+                {
+                    "name": "Fatiha",
+                    "audio": "3"
+                },
+                {
+                    "name": "Takbir",
+                    "audio": "1"
+                },
+                {
+                    "name": "Ruku",
+                    "audio": "4"
                 },
                 {
                     "name": "Qaumah",
@@ -250,11 +358,15 @@
                 },
                 {
                     "name": "Surah",
-                    "audio": "S1"
+                    "audio": "S5"
                 },
                 {
                     "name": "Takbir",
                     "audio": "1"
+                },
+                {
+                    "name": "Ruku",
+                    "audio": "4"
                 },
                 {
                     "name": "Qaumah",
@@ -294,11 +406,111 @@
                 },
                 {
                     "name": "Surah",
-                    "audio": "S2"
+                    "audio": "S6"
                 },
                 {
                     "name": "Takbir",
                     "audio": "1"
+                },
+                {
+                    "name": "Ruku",
+                    "audio": "4"
+                },
+                {
+                    "name": "Qaumah",
+                    "audio": "5"
+                },
+                {
+                    "name": "Takbir",
+                    "audio": "1"
+                },
+                {
+                    "name": "Sujud",
+                    "audio": "6"
+                },
+                {
+                    "name": "Takbir",
+                    "audio": "1"
+                },
+                {
+                    "name": "Jalsa",
+                    "audio": "7"
+                },
+                {
+                    "name": "Takbir",
+                    "audio": "1"
+                },
+                {
+                    "name": "Sujud",
+                    "audio": "6"
+                },
+                {
+                    "name": "Takbir",
+                    "audio": "1"
+                },
+                {
+                    "name": "Tashahhud",
+                    "audio": "8"
+                },
+                {
+                    "name": "Takbir",
+                    "audio": "1"
+                },
+                {
+                    "name": "Fatiha",
+                    "audio": "3"
+                },
+                {
+                    "name": "Takbir",
+                    "audio": "1"
+                },
+                {
+                    "name": "Ruku",
+                    "audio": "4"
+                },
+                {
+                    "name": "Qaumah",
+                    "audio": "5"
+                },
+                {
+                    "name": "Takbir",
+                    "audio": "1"
+                },
+                {
+                    "name": "Sujud",
+                    "audio": "6"
+                },
+                {
+                    "name": "Takbir",
+                    "audio": "1"
+                },
+                {
+                    "name": "Jalsa",
+                    "audio": "7"
+                },
+                {
+                    "name": "Takbir",
+                    "audio": "1"
+                },
+                {
+                    "name": "Sujud",
+                    "audio": "6"
+                },
+                {
+                    "name": "Takbir",
+                    "audio": "1"
+                },
+                {
+                    "name": "Fatiha",
+                    "audio": "3"
+                },
+                {
+                    "name": "Takbir",
+                    "audio": "1"
+                },
+                {
+                    "name": "Ruku",
+                    "audio": "4"
                 },
                 {
                     "name": "Qaumah",
@@ -364,11 +576,15 @@
                 },
                 {
                     "name": "Surah",
-                    "audio": "S1"
+                    "audio": "S7"
                 },
                 {
                     "name": "Takbir",
                     "audio": "1"
+                },
+                {
+                    "name": "Ruku",
+                    "audio": "4"
                 },
                 {
                     "name": "Qaumah",
@@ -408,11 +624,67 @@
                 },
                 {
                     "name": "Surah",
-                    "audio": "S2"
+                    "audio": "S8"
                 },
                 {
                     "name": "Takbir",
                     "audio": "1"
+                },
+                {
+                    "name": "Ruku",
+                    "audio": "4"
+                },
+                {
+                    "name": "Qaumah",
+                    "audio": "5"
+                },
+                {
+                    "name": "Takbir",
+                    "audio": "1"
+                },
+                {
+                    "name": "Sujud",
+                    "audio": "6"
+                },
+                {
+                    "name": "Takbir",
+                    "audio": "1"
+                },
+                {
+                    "name": "Jalsa",
+                    "audio": "7"
+                },
+                {
+                    "name": "Takbir",
+                    "audio": "1"
+                },
+                {
+                    "name": "Sujud",
+                    "audio": "6"
+                },
+                {
+                    "name": "Takbir",
+                    "audio": "1"
+                },
+                {
+                    "name": "Tashahhud",
+                    "audio": "8"
+                },
+                {
+                    "name": "Takbir",
+                    "audio": "1"
+                },
+                {
+                    "name": "Fatiha",
+                    "audio": "3"
+                },
+                {
+                    "name": "Takbir",
+                    "audio": "1"
+                },
+                {
+                    "name": "Ruku",
+                    "audio": "4"
                 },
                 {
                     "name": "Qaumah",
@@ -478,11 +750,15 @@
                 },
                 {
                     "name": "Surah",
-                    "audio": "S1"
+                    "audio": "S9"
                 },
                 {
                     "name": "Takbir",
                     "audio": "1"
+                },
+                {
+                    "name": "Ruku",
+                    "audio": "4"
                 },
                 {
                     "name": "Qaumah",
@@ -522,11 +798,111 @@
                 },
                 {
                     "name": "Surah",
-                    "audio": "S2"
+                    "audio": "S10"
                 },
                 {
                     "name": "Takbir",
                     "audio": "1"
+                },
+                {
+                    "name": "Ruku",
+                    "audio": "4"
+                },
+                {
+                    "name": "Qaumah",
+                    "audio": "5"
+                },
+                {
+                    "name": "Takbir",
+                    "audio": "1"
+                },
+                {
+                    "name": "Sujud",
+                    "audio": "6"
+                },
+                {
+                    "name": "Takbir",
+                    "audio": "1"
+                },
+                {
+                    "name": "Jalsa",
+                    "audio": "7"
+                },
+                {
+                    "name": "Takbir",
+                    "audio": "1"
+                },
+                {
+                    "name": "Sujud",
+                    "audio": "6"
+                },
+                {
+                    "name": "Takbir",
+                    "audio": "1"
+                },
+                {
+                    "name": "Tashahhud",
+                    "audio": "8"
+                },
+                {
+                    "name": "Takbir",
+                    "audio": "1"
+                },
+                {
+                    "name": "Fatiha",
+                    "audio": "3"
+                },
+                {
+                    "name": "Takbir",
+                    "audio": "1"
+                },
+                {
+                    "name": "Ruku",
+                    "audio": "4"
+                },
+                {
+                    "name": "Qaumah",
+                    "audio": "5"
+                },
+                {
+                    "name": "Takbir",
+                    "audio": "1"
+                },
+                {
+                    "name": "Sujud",
+                    "audio": "6"
+                },
+                {
+                    "name": "Takbir",
+                    "audio": "1"
+                },
+                {
+                    "name": "Jalsa",
+                    "audio": "7"
+                },
+                {
+                    "name": "Takbir",
+                    "audio": "1"
+                },
+                {
+                    "name": "Sujud",
+                    "audio": "6"
+                },
+                {
+                    "name": "Takbir",
+                    "audio": "1"
+                },
+                {
+                    "name": "Fatiha",
+                    "audio": "3"
+                },
+                {
+                    "name": "Takbir",
+                    "audio": "1"
+                },
+                {
+                    "name": "Ruku",
+                    "audio": "4"
                 },
                 {
                     "name": "Qaumah",
